Remove duplicated code in RevisionDetector.